// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeMirrorCore renders controlled 1`] = `
<div>
  <span
    style={
      Object {
        "color": "#c4c4c4",
      }
    }
  >
    Field Label
     
  </span>
  <WithStyles(ForwardRef(Toolbar))
    disableGutters={true}
  >
    <WithStyles(ForwardRef(Button))
      onClick={[Function]}
    >
      Format
    </WithStyles(ForwardRef(Button))>
  </WithStyles(ForwardRef(Toolbar))>
  <Controlled
    label="Field Label"
    onBeforeChange={[Function]}
    options={
      Object {
        "lineNumbers": true,
        "lineWrapping": true,
        "mode": "application/json",
      }
    }
    value="original value"
  />
</div>
`;

exports[`CodeMirrorCore renders with defaults 1`] = `
<div>
  <span
    style={
      Object {
        "color": "#c4c4c4",
      }
    }
  >
    Field Label
     
  </span>
  <WithStyles(ForwardRef(Toolbar))
    disableGutters={true}
  >
    <WithStyles(ForwardRef(Button))
      onClick={[Function]}
    >
      Format
    </WithStyles(ForwardRef(Button))>
  </WithStyles(ForwardRef(Toolbar))>
  <Controlled
    label="Field Label"
    onBeforeChange={[Function]}
    options={
      Object {
        "lineNumbers": true,
        "lineWrapping": true,
        "mode": "application/json",
      }
    }
    value=""
  />
</div>
`;

exports[`CodeMirrorCore renders with errors 1`] = `
<div>
  <span
    style={
      Object {
        "color": "#c4c4c4",
      }
    }
  >
    Field Label
     
  </span>
  <span
    style={
      Object {
        "color": "#ff3d3a",
      }
    }
  >
     (
    Field error!
    )
  </span>
  <WithStyles(ForwardRef(Toolbar))
    disableGutters={true}
  >
    <WithStyles(ForwardRef(Button))
      onClick={[Function]}
    >
      Format
    </WithStyles(ForwardRef(Button))>
  </WithStyles(ForwardRef(Toolbar))>
  <Controlled
    label="Field Label"
    onBeforeChange={[Function]}
    options={
      Object {
        "lineNumbers": true,
        "lineWrapping": true,
        "mode": "application/json",
      }
    }
    value=""
  />
</div>
`;
